update show price active